plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.12.0'
}

group 'com.github.novotnyr'
version '22-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation "com.squareup.okhttp3:okhttp:3.14.9"

    testImplementation 'org.mockito:mockito-core:2.23.4'
    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
}

intellij {
    version = '2021.3'
    plugins = [ 'git4idea' ]
    updateSinceUntilBuild = false
}
patchPluginXml {
    sinceBuild = '213'
    changeNotes = """
        <ul>
        <li></li>        
        </ul>
      """
}

publishPlugin {
    token = intellijPublishToken
}